--- a/gateway/kubernetes/deployment.yaml
+++ b/gateway/kubernetes/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
         - name: gateway
-          image: sbells/gateway:20250703
+          image: group23registry.azurecr.io/gateway:20250703
           ports:
             - containerPort: 8080
